test/classes/diten/newFnCall.good
test/classes/diten/newFnCall.chpl:4: error: invalid use of 'new'
