test/classes/diten/newFnCall.chpl
proc foo(a: int) {
  return a+1;
}
var a = new foo(1);
